--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   url_launcher: ^6.1.11
   pull_to_refresh: ^2.0.0
   flutter_markdown: ^0.6.14
+  google_fonts: ^4.0.4
+  http: 1.0.0
  
 
 
@@ -88,6 +90,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - google_fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
