--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -123,6 +123,90 @@ flutter:
           weight: 800
         - asset: fonts/Inter-Black.ttf
           weight: 900
+    - family: OpenSansCondensed
+      fonts:
+        - asset: fonts/OpenSans_Condensed-Light.ttf
+          weight: 300
+        - asset: fonts/OpenSans_Condensed-Regular.ttf
+          weight: 400
+        - asset: fonts/OpenSans_Condensed-Medium.ttf
+          weight: 500
+        - asset: fonts/OpenSans_Condensed-SemiBold.ttf
+          weight: 600
+        - asset: fonts/OpenSans_Condensed-Bold.ttf
+          weight: 700
+        - asset: fonts/OpenSans_Condensed-ExtraBold.ttf
+          weight: 800
+    - family: OpenSansSemiCondensed
+      fonts:
+        - asset: fonts/OpenSans_SemiCondensed-Light.ttf
+          weight: 300
+        - asset: fonts/OpenSans_SemiCondensed-Regular.ttf
+          weight: 400
+        - asset: fonts/OpenSans_SemiCondensed-Medium.ttf
+          weight: 500
+        - asset: fonts/OpenSans_SemiCondensed-SemiBold.ttf
+          weight: 600
+        - asset: fonts/OpenSans_SemiCondensed-Bold.ttf
+          weight: 700
+        - asset: fonts/OpenSans_SemiCondensed-ExtraBold.ttf
+          weight: 800
+    - family: OpenSans
+      fonts:
+        - asset: fonts/OpenSans-Light.ttf
+          weight: 300
+        - asset: fonts/OpenSans-Regular.ttf
+          weight: 400
+        - asset: fonts/OpenSans-Medium.ttf
+          weight: 500
+        - asset: fonts/OpenSans-SemiBold.ttf
+          weight: 600
+        - asset: fonts/OpenSans-Bold.ttf
+          weight: 700
+        - asset: fonts/OpenSans-ExtraBold.ttf
+          weight: 800
+    - family: OpenSansCondensedItalic
+      fonts:
+        - asset: fonts/OpenSans_Condensed-LightItalic.ttf
+          weight: 300
+        - asset: fonts/OpenSans_Condensed-Italic.ttf
+          weight: 400
+        - asset: fonts/OpenSans_Condensed-MediumItalic.ttf
+          weight: 500
+        - asset: fonts/OpenSans_Condensed-SemiBoldItalic.ttf
+          weight: 600
+        - asset: fonts/OpenSans_Condensed-BoldItalic.ttf
+          weight: 700
+        - asset: fonts/OpenSans_Condensed-ExtraBoldItalic.ttf
+          weight: 800
+    - family: OpenSansSemiCondensedItalic
+      fonts:
+        - asset: fonts/OpenSans_SemiCondensed-LightItalic.ttf
+          weight: 300
+        - asset: fonts/OpenSans_SemiCondensed-Italic.ttf
+          weight: 400
+        - asset: fonts/OpenSans_SemiCondensed-MediumItalic.ttf
+          weight: 500
+        - asset: fonts/OpenSans_SemiCondensed-SemiBoldItalic.ttf
+          weight: 600
+        - asset: fonts/OpenSans_SemiCondensed-BoldItalic.ttf
+          weight: 700
+        - asset: fonts/OpenSans_SemiCondensed-ExtraBoldItalic.ttf
+          weight: 800
+    - family: OpenSansItalic
+      fonts:
+        - asset: fonts/OpenSans-LightItalic.ttf
+          weight: 300
+        - asset: fonts/OpenSans-Italic.ttf
+          weight: 400
+        - asset: fonts/OpenSans-MediumItalic.ttf
+          weight: 500
+        - asset: fonts/OpenSans-SemiBoldItalic.ttf
+          weight: 600
+        - asset: fonts/OpenSans-BoldItalic.ttf
+          weight: 700
+        - asset: fonts/OpenSans-ExtraBoldItalic.ttf
+          weight: 800
 
   #
   # For details regarding fonts from package dependencies,
