--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   pull_to_refresh: ^2.0.0
   flutter_markdown: ^0.6.14
   qr_code_scanner: ^1.0.1
+  flutter_map: ^4.0.0
+  latlong2: ^0.8.2
+  csv: ^5.0.2
+  proj4dart: ^2.1.0
  
 
 
