--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,8 @@ app.*.map.json
 /ios/Runner/*
 !/ios/Runner/Info.plist
 !ios/Runner/Assets.xcassets/
+!/ios/Runner/AppDelegate.swift
+!/ios/Runner/SplashViewController.swift
 
 # Web
 /web/
