--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   flutter_map_marker_cluster: ^1.1.1
   google_maps_flutter: ^2.2.8
   flutter_map_location_marker: ^6.0.0
+  flutter_map_tile_caching: ^8.0.0
+  http: ^0.13.5
+  lottie: ^1.2.1
+  
  
 
 
@@ -64,10 +68,13 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
+flutter_native_splash:
+  color: "#000000"
+
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/R3_app.png"
+  image_path: "assets/R3_app_fabric.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: false
